# AirBnB_clone_v2

./: .replit  0-setup_web_static.sh  1-pack_web_static.py  2-do_deploy_web_static.py  3-deploy_web_static.py  7-dump-edited.sql  8-dump_amenities.sql  README.md  console.py  file.json  pyproject.toml  setup_mysql_dev.sql  setup_mysql_test.sql
models/: amenity.py  base_model.py  city.py  place.py  review.py  state.py  user.py
models/engine/: db_storage.py  file_storage.py
web_flask/: 0-hello_route.py  1-hbnb_route.py  10-hbnb_filters.py  2-c_route.py  3-python_route.py  4-number_route.py  5-number_template.py  6-number_odd_or_even.py  7-states_list.py  8-cities_by_states.py  9-states.py
web_flask/templates/: 10-hbnb_filters.html  5-number.html  6-number_odd_or_even.html  7-states_list.html  8-cities_by_states.html  9-states.html  rs.py
