[tool.poetry]
name = "repl-html-airbnbclonev2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_airbnbclonev2"}]

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
